<resources>
    <string name="app_name">网络守护</string>
    <string name="title_add_name">应用网络排查</string>
    <string name="app_intercept_filter">应用拦截筛选</string>
    <string name="app_click_hide">应用点击隐藏视图</string>
    <string name="global_intercept_rule">全局拦截规则</string>
    <string name="action_click_hide">点击隐藏</string>
    <string name="action_settings">设置</string>
    <string name="action_fliter">筛选</string>
    <string name="action_add">增加</string>
    <string name="action_edit">修改</string>
    <string name="action_del">删除</string>
    <string name="action_cancel_select">取消选择</string>
    <string name="action_add_black">增加拦截规则</string>
    <string name="action_edit_black">修改拦截规则</string>
    <string name="action_del_black">删除拦截规则</string>
    <string name="action_del_pkg">删除拦截规则</string>
    <string name="dialog_title_add">增加拦截规则</string>
    <string name="dialog_btn_add">增加</string>
    <string name="dialog_btn_edit">修改</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_add_input_hint">可用通配符*代表多个字符，如*.qq.com</string>
    <string name="dialog_add_input_prefill">匹配规则</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="browser_not_found">未找到浏览器</string>
</resources>
