<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.noverguo.netwatch.ui.MainActivity" >
    <item android:id="@+id/action_add"
          android:title="@string/action_add"
          android:orderInCategory="100"
          android:icon="@drawable/ic_add_white_24dp"
          app:showAsAction="always" />
    <item android:id="@+id/action_add_black"
          android:title="@string/action_add_black"
          android:orderInCategory="101"
          app:showAsAction="never" />
    <item android:id="@+id/action_filter"
        android:title="@string/action_fliter"
        android:orderInCategory="106"
        app:showAsAction="never" />
    <item android:id="@+id/action_click_hide"
        android:title="@string/action_click_hide"
        android:orderInCategory="108"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="108"
        app:showAsAction="never" />
</menu>
